test/vis: tweak word motion tests
Add more tests for:

 - starting position on a space/tab
 - single letter words
 - special symbols

--- a/vis/motions/next-end-of-word.in
+++ b/vis/motions/next-end-of-word.in
@@ -1,9 +1,12 @@
 _start next
 mid_dle next
 end_ next
-space_ next
-tab_	next
+ starting from a space
+	starting from a tab
+a b c d : single letter words
+tab	next
 word with count
++-*/\"'`^%&,;|_(){}<>[]=?! special symbols
 
 next line
 word_at_end
