--- a/vis/motions/prev-end-of-word.in
+++ b/vis/motions/prev-end-of-word.in
@@ -2,6 +2,9 @@
 prev word end_
 prev word mid_dle
 prev word _start
-prev word space _
 prev word tab	_
+starting from a space 
+starting from a tab	
+single letter words a b c d _
+special +-*/\"'`^%&,;|_(){}<>[]=?!
 prev word with count _
