--- a/vis/motions/prev-end-of-bigword.in
+++ b/vis/motions/prev-end-of-bigword.in
@@ -2,6 +2,9 @@
 prev WORD-end_
 prev WORD-mid_dle
 prev WORD-word _start
-prev WORD-space _
 prev WORD-tab	_
+starting from a space 
+starting from a tab	
+single letter words a b c d _
+special +-*/\"'`^%&,;|_(){}<>[]=?!
 prev WORD-word with count _
