--- a/vis/motions/prev-start-of-bigword.in
+++ b/vis/motions/prev-start-of-bigword.in
@@ -1,6 +1,9 @@
 prev WORD-end_
 prev WORD-mid_dle
 prev WORD-word _start
-prev WORD-space _
 prev WORD-tab	_
+starting from space 
+starting from tab	
+single letter words a b c d _
+special symbols +-*/\"'`^%&,;|_(){}<>[]=?!
 prev WORD-word with count _
