--- a/vis/motions/prev-start-of-word.in
+++ b/vis/motions/prev-start-of-word.in
@@ -1,6 +1,9 @@
 prev word-end_
 prev word-mid_dle
 prev word-word _start
-prev word-space _
 prev word-tab	_
+starting from space 
+starting from tab	
+single letter words a b c d _
+special symbols +-*/\"'`^%&,;|_(){}<>[]=?!
 prev word-word with count _
