test/core: let make clean remove generated files
Fix #23

--- a/core/Makefile
+++ b/core/Makefile
@@ -58,6 +58,7 @@ tis: clean
 clean:
 	@echo cleaning
 	@rm -f ccan-config config.h
+	@rm -f data symlink hardlink
 	@rm -f $(ALL)
 	@rm -f *.gcov *.gcda *.gcno
 	@rm -f *.valgrind
