remove libtermkey as a test dependency

--- a/util/Makefile
+++ b/util/Makefile
@@ -1,8 +1,15 @@
 -include ../../config.mk
 
-keys: keys.c
+keys: keys.c ../../map.o ../../map.h ../../libkey.h ../../ui-terminal-keytab.h ../../util.h
 	@echo Compiling keys utility
-	$(CC) $(CFLAGS) $(CFLAGS_TERMKEY) keys.c $(LDFLAGS) $(LDFLAGS_TERMKEY) $(LDFLAGS_CURSES) -o keys
+	$(CC) $(CFLAGS) $(CFLAGS_STD) $(CFLAGS_EXTRA) \
+		keys.c ../../libkey.o ../../map.o \
+		$(LDFLAGS) $(LDFLAGS_STD) $(LDFLAGS_EXTRA) -o keys
+
+debug: keys.c ../../map.o ../../map.h ../../libkey.h ../../ui-terminal-keytab.h ../../util.h
+	$(CC) $(CFLAGS) $(CFLAGS_STD) $(CFLAGS_EXTRA) $(CFLAGS_DEBUG) \
+		keys.c ../../libkey.o ../../map.o \
+		$(LDFLAGS) $(LDFLAGS_STD) $(LDFLAGS_EXTRA) -o keys
 
 clean:
 	@echo cleaning
