--- a/core/Makefile
+++ b/core/Makefile
@@ -1,34 +1,60 @@
--include ../../config.mk
+include ../../config.mk
+
+.POSIX:
+.SUFFIXES: .o .c .run .a
 
 ALL = string-test map-test array-test text-test
-SRC = $(wildcard ccan/*/*.c)
-CFLAGS += -I. -I../.. -DBUFFER_SIZE=4 -DBLOCK_SIZE=4
 
-test: $(ALL)
+test: test-string test-map test-array test-text
+
+test-string: string-test
 	@./string-test
+test-map: map-test
 	@./map-test
+test-array: array-test
 	@./array-test
+test-text: text-test
 	@./text-test
 
-config.h:
+.c.o:
+	${CC} ${CFLAGS} -I. -DSTRING_SIZE=4 -DBLOCK_SIZE=4 -c $< -o $@
+
+.o.a:
+	${AR} ${ARFLAGS} $@ $?
+
+.a:
+	${CC} ${CFLAGS} ${CFLAGS_STD} ${CFLAGS_EXTRA} ${CFLAGS_ACL} ${CFLAGS_SELINUX} \
+		$< -o $@ ${LDFLAGS} ${LDFLAGS_STD} ${LDFLAGS_EXTRA} ${LDFLAGS_ACL} ${LDFLAGS_SELINUX}
+
+
+ccan-config: ccan-config.c
+
+config.h: ccan-config
 	@echo Generating ccan configuration header
-	@${CC} ccan-config.c -o ccan-config && ./ccan-config "${CC}" ${CFLAGS} > config.h
+	./ccan-config "${CC}" ${CFLAGS} > $@ || rm -f $@
 
-text-test: config.h text-test.c ../../text.c ../../text-common.c ../../text-io.c ../../text-iterator.c ../../text-util.c ../../text-motions.c ../../text-objects.c ../../text-regex.c ../../array.c
-	@echo Compiling $@ binary
-	@${CC} ${CFLAGS} ${CFLAGS_STD} ${CFLAGS_LIBC} ${CFLAGS_EXTRA} ${filter %.c, $^} ${SRC} ${LDFLAGS} -o $@
+ccan/tap/tap.o: config.h
 
-string-test: config.h string-test.c ../../buffer.c
-	@echo Compiling $@ binary
-	@${CC} ${CFLAGS} ${CFLAGS_STD} ${CFLAGS_LIBC} ${CFLAGS_EXTRA} ${filter %.c, $^} ${SRC} ${LDFLAGS} -o $@
+string-test.o: config.h
+map-test.o: config.h
+array-test.o: config.h
+text-test.o: config.h
 
-map-test: config.h map-test.c ../../map.c
-	@echo Compiling $@ binary
-	@${CC} ${CFLAGS} ${CFLAGS_STD} ${CFLAGS_LIBC} ${CFLAGS_EXTRA} ${filter %.c, $^} ${SRC} ${LDFLAGS} -o $@
+string-test.a: ../../string.o ccan/tap/tap.o
+map-test.a: ../../map.o ccan/tap/tap.o
+array-test.a: ../../array.o ccan/tap/tap.o
+text-test.a: ccan/tap/tap.o \
+	../../array.o \
+	../../text.o \
+	../../text-common.o \
+	../../text-io.o \
+	../../text-iterator.o \
+	../../text-motions.o \
+	../../text-objects.o \
+	../../text-regex.o \
+	../../text-util.o
 
-array-test: config.h array-test.c ../../array.c
-	@echo Compiling $@ binary
-	@${CC} ${CFLAGS} ${CFLAGS_STD} ${CFLAGS_LIBC} ${CFLAGS_EXTRA} ${filter %.c, $^} ${SRC} ${LDFLAGS} -o $@
+
 
 debug: clean
 	$(MAKE) CFLAGS_EXTRA='${CFLAGS_EXTRA} ${CFLAGS_DEBUG}'
@@ -49,7 +75,7 @@ valgrind: clean ${ALL}
 	@for test in ${ALL}; do \
 		valgrind --leak-check=full --log-file="$$test.valgrind" "./$$test"; \
 		cat "$$test.valgrind"; \
-		grep LEAK "$$test.valgrind" >/dev/null && exit 1 || true; \
+		if grep -q LEAK "$$test.valgrind" then exit 1; fi; \
 	done
 
 tis: clean
@@ -57,7 +83,8 @@ tis: clean
 
 clean:
 	@echo cleaning
-	@rm -f ccan-config config.h
+	@rm -f configuratortest.c configurator.out ccan-config
+	@rm -f ccan/tap/tap.o *.o *.a
 	@rm -f data symlink hardlink
 	@rm -f $(ALL)
 	@rm -f *.gcov *.gcda *.gcno
