--- a/fuzz/Makefile
+++ b/fuzz/Makefile
@@ -1,8 +1,8 @@
 -include ../../config.mk
 
-ALL = text-fuzzer text-libfuzzer buffer-fuzzer
+ALL = text-fuzzer text-libfuzzer string-fuzzer
 CC = afl-gcc
-CFLAGS += -I. -I../.. -DBUFFER_SIZE=4 -DBLOCK_SIZE=4
+CFLAGS += -I. -DBUFFER_SIZE=4 -DBLOCK_SIZE=4
 
 TEXT_SRC = ../../text.c ../../text-common.c ../../text-io.c ../../text-iterator.c ../../text-util.c ../../text-motions.c ../../text-objects.c ../../text-regex.c ../../array.c
 
@@ -16,7 +16,7 @@ text-libfuzzer: text-fuzzer.c fuzzer.h $(TEXT_SRC)
 	@echo Compiling $@ binary
 	@${CC} ${CFLAGS} ${CFLAGS_STD} ${CFLAGS_LIBC} ${CFLAGS_EXTRA} -DLIBFUZZER ${filter %.c, $^} -fsanitize=fuzzer,address,undefined ${LDFLAGS} -o $@
 
-buffer-fuzzer: buffer-fuzzer.c fuzzer.h ../../buffer.c
+string-fuzzer: string-fuzzer.c fuzzer.h ../../string.c
 	@echo Compiling $@ binary
 	@${CC} ${CFLAGS} ${CFLAGS_STD} ${CFLAGS_LIBC} ${CFLAGS_EXTRA} ${filter %.c, $^} ${LDFLAGS} -o $@
 
@@ -32,7 +32,7 @@ libfuzzer-text: text-libfuzzer
 	@mkdir -p "results/$<"
 	@./$< -close_fd_mask=1 -only_ascii=1 -print_final_stats=1 "-dict=dictionaries/$<.dict" "inputs/$<" "results/$<"
 
-afl-fuzz-buffer: buffer-fuzzer
+afl-fuzz-string: string-fuzzer
 	@mkdir -p "results/$<"
 	@afl-fuzz -i - -x "dictionaries/$<.dict" -o "results/$<" -- "./$<" || \
 	 afl-fuzz -i "inputs/$<" -x "dictionaries/$<.dict" -o "results/$<" -- "./$<"
@@ -44,4 +44,4 @@ clean:
 distclean: clean
 	@rm -rf results/
 
-.PHONY: clean distclean debug afl-fuzz-text libfuzzer-text afl-fuzz-buffer
+.PHONY: clean distclean debug afl-fuzz-text libfuzzer-text afl-fuzz-string
